# cairn

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  USER-MANUAL.md  cairn-SRS.md  cairn-decision-summary.md  evtx-scan.bat  live-triage.bat  rust-toolchain.toml  verify-output.bat
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
crates/cairn-cli/: Cargo.toml  build.rs
crates/cairn-cli/src/: main.rs
crates/cairn-collectors/: Cargo.toml
crates/cairn-collectors-win/: Cargo.toml
crates/cairn-collectors-win/src/: cmdline_reader.rs  host.rs  lib.rs  logon.rs  net.rs  priority.rs  privilege.rs  proc.rs  signature.rs  volume.rs  wmi.rs
crates/cairn-collectors/src/: amcache.rs  bam.rs  evtx.rs  evtx_live.rs  hash.rs  hive_reader.rs  lib.rs  logon_session.rs  mft.rs  net.rs  persist.rs  prefetch.rs  proc.rs  shimcache.rs  srum.rs  userassist.rs  usn.rs  wmi_subscription.rs
crates/cairn-core/: Cargo.toml
crates/cairn-core/src/: config.rs  finding.rs  lib.rs  manifest.rs  observation.rs  orchestrator.rs  record.rs  selection.rs  time.rs  traits.rs
crates/cairn-heur/: Cargo.toml
crates/cairn-heur/src/: account.rs  byovd.rs  correlation.rs  known-vulnerable-drivers.txt  lib.rs  live_exec.rs  logon_bruteforce.rs  netconn.rs  parentchild.rs  persist.rs  score.rs  sigma.rs  temporal.rs  timestomp.rs  trust.rs
crates/cairn-launcher/: Cargo.toml
crates/cairn-launcher/src/: main.rs  menu.rs  package.rs  runner.rs  summary.rs
crates/cairn-report/: Cargo.toml
crates/cairn-report/src/: age_sink.rs  bodyfile.rs  client_text.rs  dry_run.rs  html.rs  lib.rs  zip_sink.rs
crates/cairn-sigma/: Cargo.toml
crates/cairn-sigma/src/: codec.rs  engine.rs  lib.rs  ruleset.rs
crates/cairn-sigma/tests/: parity.rs
crates/cairn-updater/: Cargo.toml
crates/cairn-updater/src/: config.rs  encode.rs  fetch.rs  lib.rs
docs/: REMAINING-WORK.md  SOC-runbook-template.md  perf-harness.md  sigma-engine-benchmark-plan.md  sigma-rule-catalog.md  stage1-plan.md  threat-model.md  verifying-a-release.md
docs/adr/: README.md  adr-0000-template.md  adr-0001-sigma-engine.md  adr-0002-rule-encoding.md  adr-0003-rule-supply-chain.md
docs/dev-history/: 2026-07-10-full-architecture-audit-summary.md  2026-07-10-resilience-audit.md  2026-07-11-sigma-candidate-rules.md  2026-07-16-wmi-persistence-research.md  INDEX.md
docs/dev-history/audit-2026-07-10/: A-correlation-architecture.md  B-unsafe-soundness.md  C-concurrency-determinism.md  D-schema-compat.md  E-test-fixture-gaps.md  F-error-handling.md
docs/dev-history/plans/: 2026-06-12-s2a-orchestrator-proc-net.md  2026-06-13-s2b-heuristics.md  2026-06-13-s2d-signature.md  2026-06-14-s2k-binary-hashing.md  2026-06-20-governance.md  2026-06-20-hive-reader-shimcache.md  2026-06-21-amcache-driver.md  2026-06-21-prefetch-collector.md  2026-06-22-userassist-collector.md  2026-06-24-output-sink.md  2026-06-24-srum-collector.md  2026-06-25-details-client.md  2026-06-25-update-rules.md  2026-06-26-cross-artifact-correlation.md  2026-06-26-noise-reduction-and-readability.md  2026-06-26-timeline-csv-enrichment.md  2026-06-27-cairn-launcher.md  2026-06-27-live-evtx-integration.md  2026-06-28-account-heuristic.md  2026-06-28-correlation-severity-tuning.md  2026-07-02-heuristic-gate-redesign.md  2026-07-03-ir-snapshot-panels.md  2026-07-04-byovd-driver-detection.md  2026-07-08-html-report-filtering.md  2026-07-09-usability-governance.md  2026-07-10-segment9-proc-data-progress.md  2026-07-11-analyzer-dependency-ordering.md  2026-07-11-c2-detection-netconn-persist-corroboration.md  2026-07-11-sigma-ruleset-expansion.md  2026-07-15-av-fp-mitigation.md  2026-07-15-logon-bruteforce-heuristic.md  2026-07-15-temporal-window-correlator-v2.md  2026-07-16-wmi-persistence-detection.md
docs/dev-history/specs/: 2026-06-13-s2b-heuristics-design.md  2026-06-13-s2c-persistence-design.md  2026-06-14-s2g-catalog-signed-design.md  2026-06-14-s2i-scheduled-tasks-design.md  2026-06-18-s2n-prime-timestomp-design.md  2026-06-18-s2o-path-map-design.md  2026-06-20-governance-design.md  2026-06-20-hive-reader-shimcache-design.md  2026-06-21-amcache-driver-design.md  2026-06-22-bam-collector-design.md  2026-06-24-output-sink-design.md  2026-06-25-details-client-design.md  2026-06-25-update-rules-design.md  2026-06-26-cross-artifact-correlation-design.md  2026-06-26-noise-reduction-and-readability-design.md  2026-06-27-cairn-launcher-design.md  2026-06-28-account-heuristic-design.md  2026-06-28-correlation-severity-tuning-design.md  2026-07-02-heuristic-gate-redesign-design.md  2026-07-03-fileless-attack-coverage-design.md  2026-07-03-ir-snapshot-panels-design.md  2026-07-04-byovd-driver-detection-design.md  2026-07-04-temporal-window-correlator-design.md  2026-07-08-html-report-filtering-design.md  2026-07-09-usability-governance-design.md  2026-07-10-segment9-proc-data-progress-design.md  2026-07-11-analyzer-dependency-ordering-design.md  2026-07-11-c2-detection-netconn-persist-corroboration-design.md  2026-07-11-sigma-ruleset-expansion-design.md  2026-07-15-av-fp-mitigation-design.md  2026-07-15-logon-bruteforce-heuristic-design.md  2026-07-15-temporal-window-correlator-v2-design.md  2026-07-16-wmi-persistence-detection-design.md  2026-07-19-live-exec-heuristic-design.md
docs/superpowers/plans/: 2026-06-13-s2c-persistence.md  2026-06-13-s2e-proc-signed.md  2026-06-13-s2f-binpath-candidates.md  2026-06-14-s2g-catalog-signed.md  2026-06-14-s2h-heuristic-calibration.md  2026-06-14-s2i-scheduled-tasks.md  2026-06-14-s2j-signer-identity.md  2026-06-15-s2l-profile-only-wiring.md  2026-06-16-s2m-e2e-evidence.md  2026-06-16-s2m-raw-volume-primitive.md  2026-06-17-s2n-e2e-evidence.md  2026-06-17-s2n-mft-macb.md  2026-06-18-s2n-prime-timestomp.md  2026-06-18-s2o-path-map.md  2026-06-20-hive-reader-shimcache.md  (+5 more)
rules/: fetch-and-encode.sh  ruleset.toml
rules/config/: README.md  channel_abbreviations.txt  eventkey_alias.txt
rules/sigma/: PROVENANCE  proc_creation_win_hh_chm_execution.yml
scripts/: package.ps1
tests/: fetch-fixtures.sh
(+97 files in other folders)
