# Cairn workspace. Stage 1 crates only are wired; later-stage crates added per docs/stage1-plan.md.
[workspace]
resolver = "2"
members = [
    "crates/cairn-core",
    "crates/cairn-sigma",
    "crates/cairn-report",
    "crates/cairn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ali-bobo <239345874+ali-bobo@users.noreply.github.com>"]
# TODO: point at the public repo once the GitHub remote is created.
repository = "https://github.com/ali-bobo/cairn"

# Shared dep versions, pinned to the exact resolved versions (T0). Cargo.lock is
# committed for reproducible builds (NFR7). No wide ranges / `*` / `latest`.
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
thiserror = "1.0.69"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
sha2 = "0.10.9"
csv = "1.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
# external forensic/sigma crates wired in S1 build steps, not here yet:
# evtx = "0.8"            # T4
# sigma engine           # T6 (see docs/sigma-engine-benchmark-plan.md)

[profile.release]
# legitimacy: NO strip, NO panic=abort tricks for "small/low-entropy" binary.
# A normal, debuggable, signed release is the goal. See docs/threat-model.md.
opt-level = 3
lto = "thin"
