# Cairn workspace. Stage 1 crates only are wired; later-stage crates added per docs/stage1-plan.md.
[workspace]
resolver = "2"
members = [
    "crates/cairn-core",
    "crates/cairn-collectors",
    "crates/cairn-collectors-win",
    "crates/cairn-sigma",
    "crates/cairn-report",
    "crates/cairn-heur",
    "crates/cairn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ali-bobo <239345874+ali-bobo@users.noreply.github.com>"]
repository = "https://github.com/ali-bobo/cairn"

# Shared dep versions, pinned to the exact resolved versions (T0). Cargo.lock is
# committed for reproducible builds (NFR7). No wide ranges / `*` / `latest`.
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
sha2 = "0.10.9"
csv = "1.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
evtx = "0.11.2"       # T4: EVTX parsing (cairn-collectors)
sigma-rust = "0.7.0"  # T6: Sigma 2.0 engine (cairn-sigma; ADR-0001)
winresource = "0.1.31" # embed PE version/manifest resource (legitimacy; Windows-only build-dep)
windows = "0.62.2"    # native WinAPI for live collectors (cairn-collectors-win only; S2)
winreg = "0.56.0"    # safe Windows Registry wrapper (cairn-collectors persist, Windows-only)
notatin = { version = "1.0.1", default-features = false } # Offline Windows registry hive parser (Apache-2.0, 100% safe Rust). default-features = false drops binary-only deps (clap/xlsxwriter/walkdir). Used by hive_reader for locked-hive parse + .LOG1/.LOG2 replay. Last upstream release 2023-08 (mature, stale); cargo audit gates advisories.
compcol = { version = "0.6", default-features = false, features = ["xpress_huffman"] } # Windows MAM / Xpress-Huffman decompression for Prefetch .pf files. 100% safe Rust (forbids unsafe_code crate-wide). Used by cairn-collectors prefetch module.

[profile.release]
# legitimacy: NO strip, NO panic=abort tricks for "small/low-entropy" binary.
# A normal, debuggable, signed release is the goal. See docs/threat-model.md.
opt-level = 3
lto = "thin"
