[package]
name = "cairn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
cairn-core = { path = "../cairn-core" }
cairn-collectors = { path = "../cairn-collectors" }
cairn-sigma = { path = "../cairn-sigma" }
cairn-report = { path = "../cairn-report" }
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rayon.workspace = true

# Windows-only: embed PE version/manifest resource (ProductName, FileDescription,
# version) so the binary self-identifies in file properties + to EDR/SOC (legitimacy,
# SRS §13). No effect on non-Windows builds.
[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true
