[package]
name = "cairn-collectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
cairn-collectors-win = { path = "../cairn-collectors-win" }
ntfs = "=0.4.0"
tracing.workspace = true
evtx.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
quick-xml = { version = "0.40.1", default-features = false }
sha2.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
