[package]
name = "cairn-sigma"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Decide engine in T6 (docs/sigma-engine-benchmark-plan.md), then add ONE of:
# sigma-engine = "..."   |   sigmars = "..."   |   tau-engine = "..."
