[package]
name = "cairn-sigma"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sigma-rust.workspace = true # Sigma 2.0 engine (ADR-0001)
